--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
-streamlit==1.29.0
-pandas==2.1.1
-requests==2.31.0
-streamlit-option-menu==0.3.6
-streamlit-folium==0.15.0
-matplotlib==3.8.0
-folium==0.14.0
-Pillow==10.0.1
-numpy==1.26.0
+fastapi
+pymongo
+python-dotenv
+streamlit
+streamlit-option-menu
+pandas
+matplotlib
+python-jose[cryptography]
+passlib[bcrypt]
+python-multipart
+uvicorn
+Pillow
+numpy
